# call-history

./: .gitignore  README.md  app.py  call_history.py  pyproject.toml  requirements.txt
systemd/system/: call-app.service  call-history.service  call-history.timer
template/: license.txt  style.css  table.tpl
template/css/: style.css
